# floating

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
floating/: Cargo.toml
floating-cli/: Cargo.toml
floating-cli/src/: lib.rs  main.rs
floating-web/: Cargo.toml  index.html
floating-web/src/: main.rs
floating/src/: add.rs  lib.rs
src/: add.rs  classify.rs  lib.rs  main.rs
