[package]
name = "floating-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floating = { path = "../floating" }
floating-cli = { path = "../floating-cli" }
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
